# Email-Triage-OpenEnv

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  start.sh  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
components/: action-buttons.tsx  email-display.tsx  email-list.tsx  feedback-panel.tsx  stats-panel.tsx  task-selector.tsx
scripts/: validate-submission.sh
server/: .env.example  Dockerfile  README.md  __init__.py  app.py  email_triage_env.py  inference.py  main.py  openenv.yaml  requirements.txt
