[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "2.1.0"
description = "Real-world email triage OpenEnv environment"
requires-python = ">=3.12"
dependencies = [
	"fastapi==0.104.1",
	"httpx==0.25.1",
	"openenv-core>=0.2.0",
	"pydantic==2.5.0",
	"python-dotenv==1.0.0",
	"requests==2.32.3",
	"uvicorn==0.24.0",
]

[project.scripts]
server = "server.main:main"

[tool.setuptools]
py-modules = []
